--- a/projet.html
+++ b/projet.html
@@ -10,19 +10,38 @@
 
 <body>
     <header>
-        <img id="image1" src="ivan-torres-MQUqbmszGGM-unsplash.jpg" alt="image 1"> 
-        <ul class="class2">
-            <li class="class3">MENU</li>
-            <li class="class3">A propos</li>
-            <li class="class3">Blog</li>
-            <li class="class3">Blog</li>
+        <img id="image1" src="banniere.png" alt="image 1"> 
+        <ul class="menu">
+            <li class="elementmenu">MENU</li>
+            <li class="elementmenu">A propos</li>
+            <li class="elementmenu">Blog</li>
+            <li class="elementmenu">Blog</li>
         </ul>
-        <div class="class5">
-            <p class="class4" id="titre">GIGA PIZZERIA</p>
-            <button class="class4" id="bouton1">En savoir plus</button>
+        <div class="gigapizzeria">
+            <p class="elementgigapizzeria" id="titre">GIGA PIZZERIA</p>
+            <button class="elementgigapizzeria" id="ensavoirplus">En savoir plus</button>
         </div>
+        <div>
+            <img class="desnouveautés" id="image2" src="Pizzanouveautes.png" alt="image2">
+            <ul class="desnouveautés" id="nouveautés">Des Nouveautés
+                <li>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</li>
+                <li>Lorem ipsum, dolor sit amet consectetur adipisicing elit.</li>
+                <li>Lorem ipsum dolor sit, amet consectetur adipisicing elit.</li>
+            </ul>
+        </div>
+        <div class="footer">
+           <ul>
+            <li class="elemfooter">Nouveau Format
+                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+            </li>
+            <li class="elemfooter">Master class
+                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+            </li>
+            <li class="elemfooter">Le Restaurant
+                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+            </li>
+           </ul>
+            </div>
     </header>
-        
-    
 </body>
 </html>
